force-app/main/CSDomainSelector/objects/TriggerSettings__c/TriggerSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to declaratively enable/disable custom triggers.</description>
    <label>Trigger Settings</label>
</CustomObject>