force-app/main/CSDomainSelector/objects/TriggerSettings__c/fields/IsAfterDeleteDisabled__c.field-meta.xml
<CustomField>
    <fullName>IsAfterDeleteDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Delete Disabled?</label>
    <type>Checkbox</type>
</CustomField>