force-app/main/CSDomainSelector/objects/TriggerSettings__c/fields/IsAfterInsertDisabled__c.field-meta.xml
<CustomField>
    <fullName>IsAfterInsertDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Insert Disabled?</label>
    <type>Checkbox</type>
</CustomField>