force-app/main/CSDomainSelector/objects/TriggerSettings__c/fields/IsAfterUndeleteDisabled__c.field-meta.xml
<CustomField>
    <fullName>IsAfterUndeleteDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Undelete Disabled?</label>
    <type>Checkbox</type>
</CustomField>