force-app/main/CSDomainSelector/objects/TriggerSettings__c/fields/IsAfterUpdateDisabled__c.field-meta.xml
<CustomField>
    <fullName>IsAfterUpdateDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Update Disabled?</label>
    <type>Checkbox</type>
</CustomField>