force-app/main/CSDomainSelector/objects/TriggerSettings__c/fields/IsBeforeDeleteDisabled__c.field-meta.xml
<CustomField>
    <fullName>IsBeforeDeleteDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Before Delete Disabled?</label>
    <type>Checkbox</type>
</CustomField>