force-app/main/CSDomainSelector/objects/TriggerSettings__c/fields/IsBeforeInsertDisabled__c.field-meta.xml
<CustomField>
    <fullName>IsBeforeInsertDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Before Insert Disabled?</label>
    <type>Checkbox</type>
</CustomField>