force-app/main/CSDomainSelector/objects/TriggerSettings__c/fields/IsBeforeUpdateDisabled__c.field-meta.xml
<CustomField>
    <fullName>IsBeforeUpdateDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Before Update Disabled?</label>
    <type>Checkbox</type>
</CustomField>