force-app/main/CSDomainSelector/objects/TriggerSettings__c/fields/IsDisabled__c.field-meta.xml
<CustomField>
    <fullName>IsDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this to disable the trigger</inlineHelpText>
    <label>Disabled?</label>
    <type>Checkbox</type>
</CustomField>